Removed unused parameter in command line call to Java